--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ADVENTURE</title>
+        <title>AIR CIRCLE</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -43,7 +43,7 @@
                         width="40"
                         style="margin: -25px -10px -25px -20px"
                     />
-                    <h1 class="logo">&nbsp;ADVENTURE</h1></a
+                    <h1 class="logo">&nbsp;AIR CIRCLE</h1></a
                 ></span
             >
             <ul class="nav-links">
